# zspotify

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-ci.yml
examples/: config.example.json  docker-compose.yml
zspotify/: __main__.py  arg_parser.py  custom_types.py  db.py  respot.py  types.py
zyspotify/: __main__.py  arg_parser.py  custom_types.py  db.py  respot.py  tagger.py  utils.py
